# JetsonRover2026

./: .gitignore  FPStest.py  README.md  camino.launch.py  gemma.py  git.bash  goal_node.py  iphone_pose_node.py  logonav_inference_node.py  manual_goal_test.py  manuel.bash  manuel.launch.py  mbra.bash  mbra.launch.py  motion_converter_node.cpp  pali_gemma.py  planner.py  pose_node.py  prompts.py  receiver.py  relative_goal_node.py  requirements.txt  rover.bash  rover_controller_node.py  tool_executor.py  tools.py  tools.pyi  vidRecord.py  wake.py
NVMM-interface/: get_appsink.cpp
arduino/: main.cpp
dashboard/: README.md  package.json  server.js
dashboard/public/: app.js  index.html  styles.css
deployment/: LogoNav_ros.py
ios/Localization/LocalizationBridge/: DebugLogStore.swift  MapViewModel.swift  NetworkManager.swift
ios/LocalizationBridge/: ARSessionManager.swift  Info.plist  LocalizationBridgeApp.swift  LocationManager.swift  MapSelectionView.swift  MapViewModel.swift  PoseSender.swift  WaypointMessage.swift
ios/LocalizationBridge.xcodeproj/: project.pbxproj
src/action_msgs/: CMakeLists.txt  package.xml
src/action_msgs/srv/: EnableMBRA.srv  Image.srv  Stop.srv  Tool.srv  Turn.srv
src/actuators/: package.xml  setup.py
src/actuators/actuators/: CmdVelToArduino.py  motor_commands_to_arduino.py
src/actuators/arduino/mars_rover_controller/: mars_rover_controller.ino
src/arduino_bridge/: package.xml  setup.cfg  setup.py
src/arduino_bridge/arduino_bridge/: arduino_bridge_node.py
src/arduino_bridge/test/: arduino_test.py
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py
src/custom_msg/: package.xml
src/custom_msgs/: CMakeLists.txt  package.xml
src/manuel_controller/: package.xml  setup.cfg  setup.py
src/manuel_controller/manuel_controller/: manuel_controller_node.py  stop.py
src/mbra/: package.xml  setup.cfg  setup.py
src/mbra/launch/: mbra.launch.py
src/mbra/mbra/: cmd_vel_relay_node.py
src/mbra/mbra/deployment/: LogoNav_ros.py  utils_logonav.py
src/mbra/test/: manual_goal_test.py
src/mbra_node/: package.xml  setup.cfg  setup.py
src/mbra_node/mbra_node/deployment/: LogoNav_ros.py  (+1 more)
src/motion-converter/: CMakeLists.txt  motion_converter_node.cpp  package.xml  rover_controller_node.cpp  setup.cfg  setup.py
src/motion-converter/config/: rover_controller_params.yaml
src/motion-converter/launch/: motion_converter.launch.py
src/sensors/: package.xml  setup.py
src/sensors/lanuch/: sensors.launch.py
src/sensors/sensors/: camera_node.py  iphone_node.py  iphone_pose_node.py
src/video_logger/: package.xml  setup.cfg  setup.py
src/video_logger/launch/: dashboard.launch.py
src/video_logger/video_logger/: dashboard_node.py  video_logger.py
src/vlm-planner/: homography.py  package.xml  setup.cfg  setup.py
src/vlm-planner/launch/: agent.launch.py  camino.launch.py
src/vlm-planner/test/: ollama_test.py
src/vlm-planner/vlm-planner/: action_node.py  agent.py  client.py  draft.py  planner.py  prompts.py  tool_executor.py  vlm-node.py
src/vlm-planner/vlm_planner/: action_node.py  agent.py  client.py  prompts.py  tools.py  utils.py  vlm_node.py
video_logger/video_logger/: video_logger.py
(+10 files in other folders)
