<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>manuel_controller</name>
	<version>0.0.1</version>
	<description>ROS2 manual controller that publishes cmd_vel from UDP joystick input.</description>

	<maintainer email="zhangboya@example.com">zhangboya</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<exec_depend>rclpy</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>