<?xml version="1.0"?>
<package format="3">
  <name>motion_converter</name>
  <version>0.0.1</version>
  <description>C++ ROS2 nodes for rover control and motion conversion.</description>

  <maintainer email="you@example.com">JetsonRover Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
